<resources>

    <string name="app_name">Events Mumbai</string>
	<string name="banner">Events\nMumbai</string>
	<string name="date">Date</string>
	<string name="description">Description</string>
	<string name="attend">Attend This Event</string>
	<string name="skip">Skip This Event</string>
	<string name="pull_to_refresh">Please check your internet connection and try again.\nPull to refresh.</string>
	<string name="loading">Loading&#8230;</string>
	<string name="student_ambassadors">Firefox Student Ambassadors</string>
	<string name="become_an_ambassador">Become A Student Ambassador</string>
	<string name="no_events">You Are Not Attending Any Events</string>
	<string name="share">Share</string>
	<string name="reminder">Set A Reminder</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="contact_form">Contact Form</string>
	<string name="message">Message (500 Characters Only)</string>
	<string name="email_address">Email Address</string>
	<string name="do_not_share">We Do Not Share Your Email Address With Anybody. Period.</string>
	<string name="send">Send</string>
	<string name="message_empty">Please Enter A Message</string>
	<string name="email_invalid">Please Enter A Valid Email Address</string>
	<string name="message_sent">Message Successfully Sent</string>
	<string name="message_not_sent">Message Could Not Be Sent. Please Try Again.</string>
	<string name="not_a_bot">Are You A Bot? Try Again After 15 Seconds</string>
	<string name="feedback_form">Feedback Form</string>
	<string name="feedback">Anything else we should know?\n(1000 Characters Only)</string>
	<string name="please_select_rating">Please Select A Rating</string>
	<string name="submit_feedback">Submit Feedback</string>
	<string name="thank_you_feedback">Thank you for your feedback!</string>
	<string name="drawer_open">Drawer Open</string>
	<string name="drawer_close">Drawer Closed</string>
	<string name="sort">Sort Events</string>
</resources>
